[package]
name = "yardsale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yardsale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
keychain = { path = "../keychain", features = ["cpi"] }
