[package]
name = "yardsale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yardsale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
mpl-token-auth-rules = "1.3.0"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
keychain = { path = "../keychain", features = ["cpi"] }

# compression stuff
solana-program = "*"
mpl-bubblegum = { version = "0.8.0", features = ["no-entrypoint", "cpi"] }
#mpl-bubblegum = { path = "../../../../metaplex-program-library/bubblegum/program", features = ["no-entrypoint", "cpi"] }

spl-account-compression = { version = "0.1.10", features = ["cpi"] }
